--- a/package.json
+++ b/package.json
@@ -8,21 +8,25 @@
   "scripts": {
     "build": "npx tsc",
     "test": "jest --detectOpenHandles",
-    "lint": "npx eslint . "
+    "lint": "npx eslint . ",
+    "deploy:dev": "npm run build && sudo sls deploy --stage dev"
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.147",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1692.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "eslint": "^9.18.0",
     "jest": "^29.7.0",
+    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-functions-base-path": "^1.0.33",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3",
